--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Shashank Shekhar</title>    <!-- Change it your name  --> .
+    <title>Shashank Shekh</title>    <!-- Change it your name  --> .
   </head>
   <body class="light" id="top">
     <header class="header center">
