--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Shashank Shekh</title>    <!-- Change it your name  --> .
+    <title>Shashank Shekhar</title>    <!-- Change it your name  --> .
   </head>
   <body class="light" id="top">
     <header class="header center">
@@ -69,7 +69,7 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1>Hi, I am <span class="about__name">Shashank Shekhar.</span></h1>
+        <h1>Hi, I am <span class="about__name">Shekhar.</span></h1>
         <h2 class="about__role">Aspiring Cloud Engineer</h2>
         <p class="about__desc"> <!-- Edit the About make sure you add your degree!-->
           I'm a Tech geek living in Bangalore, India. I love to solve problems and build things. Also an Ex-TCSer and presently a Post grad Data Science student at Christ University!
